--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = [
     {name = "Henadzi Khviasko",email = "henadzi.khviasko@pynest.io"}
 ]
-readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "numpy (>=2.3.3,<3.0.0)"
 ]
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
