--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "numpy (>=2.3.3,<3.0.0)"
+    "numpy (>=2.3.3,<3.0.0)",
+    "isort (>=7.0.0,<8.0.0)"
 ]
 
 [build-system]
